refactor: removed old dependencies and replaced them with modern analogs